--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,12 +2,12 @@
   "dependencies": {
     "com.unity.2d.spriteshape": "1.0.12-preview.1",
     "com.unity.ads": "2.0.8",
-    "com.unity.analytics": "3.0.9",
-    "com.unity.collab-proxy": "1.2.9",
-    "com.unity.package-manager-ui": "2.0.0-preview.7",
+    "com.unity.analytics": "3.2.2",
+    "com.unity.collab-proxy": "1.2.15",
+    "com.unity.package-manager-ui": "2.0.3",
     "com.unity.probuilder": "3.0.9",
     "com.unity.progrids": "3.0.3-preview.0",
-    "com.unity.purchasing": "2.0.1",
+    "com.unity.purchasing": "2.0.3",
     "com.unity.textmeshpro": "1.3.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
